tests/backend/checkmach/fail25.output
File "fail25.ml", line 39, characters 5-15:
Error: Annotation check for zero_alloc failed on function Fail25.g (camlFail25.g_HIDE_STAMP)

File "fail25.ml", line 41, characters 8-11:
Error: called function may allocate (direct call camlFail25.g_HIDE_STAMP)

File "fail25.ml", line 45, characters 5-15:
Error: Annotation check for zero_alloc failed on function Fail25.foo (camlFail25.foo_HIDE_STAMP)

File "fail25.ml", line 46, characters 2-11:
Error: called function may allocate (direct tailcall camlFail25.bar_HIDE_STAMP)

File "fail25.ml", line 47, characters 5-15:
Error: Annotation check for zero_alloc failed on function Fail25.bar (camlFail25.bar_HIDE_STAMP)

File "fail25.ml", line 48, characters 2-11:
Error: called function may allocate (direct tailcall camlFail25.foo_HIDE_STAMP)

File "fail25.ml", line 50, characters 5-15:
Error: Annotation check for zero_alloc failed on function Fail25.f1 (camlFail25.f1_HIDE_STAMP)

File "fail25.ml", line 52, characters 2-12:
Error: called function may allocate (direct tailcall camlFail25.f2_HIDE_STAMP)

File "fail25.ml", line 53, characters 5-15:
Error: Annotation check for zero_alloc failed on function Fail25.f2 (camlFail25.f2_HIDE_STAMP)

File "fail25.ml", line 54, characters 2-12:
Error: called function may allocate (direct tailcall camlFail25.f1_HIDE_STAMP)

File "fail25.ml", line 57, characters 5-15:
Error: Annotation check for zero_alloc failed on function Fail25.outer (camlFail25.outer_HIDE_STAMP)

File "fail25.ml", line 63, characters 2-13:
Error: called function may allocate (direct tailcall camlFail25.inner_HIDE_STAMP)
